fix z-index bug for dropdown menu

--- a/packages/frontend/app/components/TransferModal/TransferDropdown.module.css
+++ b/packages/frontend/app/components/TransferModal/TransferDropdown.module.css
@@ -39,7 +39,7 @@
     list-style: none;
     border-radius: var(--radius-s);
     background-color: var(--bg-dark4);
-    z-index: calc(var(--create-strategy-page-z-index) + 1);
+    z-index: 2;
 }
 
 .dropdown > ul > li {
